fix: fix broken layout when direction rtl is applied (#836)
* fix: fix broken layout when direction rtl is applied

* fix: fix broken docs link

* feat: update panel order when resize

* test: add tests for rtl direction

* refactor: use updatePanelOrder as a camera method

* refactor: change the location of const declaration

* feat: use updatePanelOrder when resize is called

--- a/test/manual/css/index.css
+++ b/test/manual/css/index.css
@@ -58,3 +58,7 @@ header {
   user-select: none;
   -webkit-user-drag: none;
 }
+
+.rtl {
+  direction: rtl;
+}
